<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UnitOneResOneFragment">

    <ImageView
        android:id="@+id/fragment_unit_one_resident_one_profile_imageview"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/content_description_profile_picture_of_resident"
        android:src="@drawable/profile_icon_50x50"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fragment_unit_one_resident_one_room_num_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/fragment_unit_one_resident_one_room_num_textview"
        style="@style/ResidentInformationTextView"
        android:text="@string/residentRoomNum"
        app:layout_constraintTop_toBottomOf="@id/fragment_unit_one_resident_one_profile_imageview"
        app:layout_constraintBottom_toTopOf="@id/fragment_unit_one_resident_one_name_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/fragment_unit_one_resident_one_name_textview"
        style="@style/ResidentInformationTextView"
        android:text="@string/residentName"
        app:layout_constraintTop_toBottomOf="@id/fragment_unit_one_resident_one_room_num_textview"
        app:layout_constraintBottom_toTopOf="@id/fragment_unit_one_resident_one_age_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/fragment_unit_one_resident_one_age_textview"
        style="@style/ResidentInformationTextView"
        android:text="@string/residentAge"
        app:layout_constraintTop_toBottomOf="@id/fragment_unit_one_resident_one_name_textview"
        app:layout_constraintBottom_toTopOf="@id/fragment_unit_one_resident_one_bio_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/fragment_unit_one_resident_one_bio_textview"
        style="@style/ResidentInformationTextView"
        android:text="@string/residentBio"
        app:layout_constraintTop_toBottomOf="@id/fragment_unit_one_resident_one_age_textview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>