<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="uk.ac.hope.mcse.android.coursework.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />

        <action
            android:id="@+id/action_unit_one_to_unit_one_resident_one"
            app:destination="@id/UnitOneResOneFragment"/>
    </fragment>

    <fragment
        android:id="@+id/SecondFragment"
        android:name="uk.ac.hope.mcse.android.coursework.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>

    <fragment
        android:id="@+id/UnitOneResOneFragment"
        android:name="uk.ac.hope.mcse.android.coursework.UnitOneResOneFragment"
        android:label="@string/unit_1_resident_1_button_label"
        tools:layout="@layout/fragment_unit_one_res_one">

        <action
            android:id="@+id/action_unit_one_res_one_to_unit_one"
            app:destination="@+id/FirstFragment"/>

    </fragment>

</navigation>