<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateResidentFragment">

    <ImageView
        android:id="@+id/show_resident_picture_imageview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/default_profile_icon_50x50"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/get_resident_picture_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/get_resident_picture_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_resident_picture_button_string"
        app:layout_constraintTop_toBottomOf="@id/show_resident_picture_imageview"
        app:layout_constraintBottom_toTopOf="@+id/enter_room_number_textinputlayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enter_room_number_textinputlayout"
        style="@style/ResidentInformationTextView"
        app:layout_constraintTop_toBottomOf="@id/get_resident_picture_button"
        app:layout_constraintBottom_toTopOf="@+id/enter_name_textinputlayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/residentRoomNum" />

    </com.google.android.material.textfield.TextInputLayout>






    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enter_name_textinputlayout"
        style="@style/ResidentInformationTextView"
        app:layout_constraintTop_toBottomOf="@id/enter_room_number_textinputlayout"
        app:layout_constraintBottom_toTopOf="@id/enter_age_textinputlayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/residentName" />

    </com.google.android.material.textfield.TextInputLayout>




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enter_age_textinputlayout"
        style="@style/ResidentInformationTextView"
        app:layout_constraintTop_toBottomOf="@id/enter_name_textinputlayout"
        app:layout_constraintBottom_toTopOf="@id/enter_bio_textinputlayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/residentAge" />

    </com.google.android.material.textfield.TextInputLayout>




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enter_bio_textinputlayout"
        style="@style/ResidentInformationTextView"
        app:layout_constraintTop_toBottomOf="@id/enter_age_textinputlayout"
        app:layout_constraintBottom_toTopOf="@id/create_resident_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/residentBio" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/create_resident_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_button_string"
        app:layout_constraintTop_toBottomOf="@id/enter_bio_textinputlayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>